--- a/RMPreview.tex
+++ b/RMPreview.tex
@@ -379,22 +379,18 @@ The above considerations place constraints on the formation time of the systems 
 
 \section{Prospects for gravitational-wave astronomy}\label{prospect}
 
-\ajf{Might be worth reiterating at the start of this section that little can be said conclusively using the observations to date -- and then the next sentence about expected detection rates is more impactful -- we will know soon!}
-
-Observed rates of binary black hole mergers indicate merger rates of around $\sim 10$ to $\sim 200$ Gpc$^{-3}$ yr$^{-1}$ \citep{GW150914:rates,GW170104}, which points to the prospect of tens of detections in the next observing run and hundred\ilya{s} within the next three years, once the LIGO and Virgo instruments reach design sensitivity \citep{scenarios}.  This will yield enough information about both individually exciting events and population distributions to use gravitational-wave astronomy as a genuine tool for exploring stellar and binary evolution.  
-
-\ajf{In this section we... describe some individually informative events and discuss some theoretical modeling techniques that will help to extract useful info from the observed data as the dataset grows in size... or something.}
+\ilya{The half dozen gravitational-wave events observed to date provide limited conclusive information about the astrophysics of binary black holes and their progenitors.  Fortunately, these observations} indicate \ilya{a binary black hole} merger rate of around $\sim 10$ to $\sim 200$ Gpc$^{-3}$ yr$^{-1}$ \citep{GW150914:rates,GW170104}, which points to the prospect of tens of detections in the next observing run and hundred\ilya{s} within the next three years, once the LIGO and Virgo instruments reach design sensitivity \citep{scenarios}.  This will yield enough information about both individually exciting events and population distributions to \ilya{inaugurate} gravitational-wave astronomy as a genuine tool for exploring stellar and binary evolution.  \ilya{In this section, we describe some of the prospects for extracting information from the growing data set of observations over the next few years, including single informative observations, population statistical inference and theoretical modelling.}
 
 \subsection{Individual exciting events}
-Single events that would be individually informative include the discovery of a merging binary black hole with a component mass in the pair-instability supernova mass gap.  Models of pair instability supernovae suggest that no black holes with masses between $\sim 60 M_\odot$ (possibly reduced to $\sim 45 M_\odot$ by pulsational pair instability \citep{Woosley:2017}) and $\sim 130 M_\odot$ should form as a result of stellar collapse, with black hole formation possible on both sides of the mass gap \citep{Marchant:2016}.  Therefore, a discovery of a single object in this mass gap would point to either past dynamical mergers that left the merger remnant to be reused in a dense stellar environment, or to a theoretical failure in pair instability models. 
+Single events that would be individually informative include the discovery of a merging binary black hole with a component mass in the pair-instability supernova mass gap.  Models of pair instability supernovae suggest that no black holes with masses between $\sim 60 M_\odot$ (possibly reduced to $\sim 45 M_\odot$ by pulsational pair instability \citep{Woosley:2017}) and $\sim 130 M_\odot$ should form as a result of stellar collapse, with black hole formation possible on both sides of the mass gap \citep{Marchant:2016}.  Therefore, a discovery of a single object in this mass gap would point to either past dynamical mergers that left the merger remnant to be reused in a dense stellar environment \citep{Rodriguez:2018}, or to a theoretical failure in pair instability models. 
 
-Similarly, the discovery of a merger component with a mass between $\sim 2.3 M_\odot$ and $\sim 5 M_\odot$, in the range between the most massive known neutron stars and least massive black holes \citep{Ozel:2010,Farr:2011} would shed light on supernova explosion models, specifically the amount of fallback that can occur before the explosion \citep{Fryer:2012}.
+Similarly, the discovery of a merger component with a mass between $\sim 2.1 M_\odot$ and $\sim 4.5 M_\odot$, in the range between the most massive known neutron stars and least massive black holes \citep{Ozel:2010,Farr:2011} would shed light on supernova explosion models, specifically the amount of fallback that can occur before the explosion \citep{Fryer:2012}.
 
-Other individually exciting events could include the first confirmed discovery of an intermediate mass black hole in the few-hundred solar-mass range, either as a merger of two such black holes \citep[e.g.,][]{Veitch:2015,Graff:2015} or as an intermediate-mass-ratio \ajf{not sure what this means} inspiral into such an object \citep[e.g.,][]{Haster:2015IMRI,Haster:2016}. 
+Other individually exciting events could include the first confirmed discovery of an intermediate mass black hole in the few-hundred solar-mass range, either as a merger of two such black holes \citep[e.g.,][]{AmaroSeoaneSantamaria:2009,Veitch:2015,Graff:2015} or as an intermediate-mass-ratio inspiral \ilya{of a stellar-mass compact object} into such \ilya{black hole} \citep[e.g.,][]{Mandel:2008,Haster:2015IMRI,Haster:2016}. 
 
-A source with a detectable in-band \ajf{what band?} eccentricity would clearly signal a dynamical capture \citep{Breivik:2016}. 
+A source with a detectable eccentricity would clearly signal a dynamical capture \citep{Breivik:2016}. 
 
-A measurement of an effective spin value close to either 1 or $-1$ would point to rapid spins of both black holes. A substantial positive effective spin coupled with high masses would point to the likelihood of chemically homogeneous formation \citep{Marchant:2016}, while a substantially negative effective spin measurement would indicate the absence of alignment, likely either through a spin tilt or dynamical formation.  
+A measurement of an effective spin value close to either 1 or $-1$ would point to rapid spins of both black holes. A substantial positive effective spin coupled with high masses would point to the likelihood of chemically homogeneous formation \citep{Marchant:2016}, while a substantially negative effective spin measurement would indicate \ilya{an unexpected anti-alignment between rapid spins and the binary's orbital angular momentum, perhaps} through either a \ilya{supernova} spin tilt or dynamical formation.  
 
 \subsection{Population statistics}
 Population statistics will generally yield more information than individual events. \ajf{needs another intro sentence explaining what you mean by population statistics, I think, before this jumps into pretty jargony talk, and we should also say what you're trying to do with the statistical analysis} We can separate the approaches to inference on the observed populations into two types: unmodeled or weakly modeled inference, and inference that relies on accurate models. 
@@ -429,7 +425,7 @@ The future of gravitational-wave astronomy holds the prospect of addressing the 
 
 
 \begin{acknowledgements}
-IM thanks all of the people who have guided him to understand stellar and binary evolution, foremost among them Selma de Mink.   The students who contributed to building COMPAS (Simon Stevenson, Alejandro Vigna G\'{o}mez, Coenraad Neijssel -- who deserves special thanks for assistance with figures \ref{fig:BHremnant} and \ref{fig:Rmax}, Jim Barrett, Sebastian Gaebel) and external collaborators (including Stephen Justham and Philipp Podsiadlowski) deserve particular thanks.  Thanks also to Cole Miller, Vicky Kalogera, and Will Farr for stimulating discussions spanning many years. 
+IM thanks all of the people who have guided him to understand stellar and binary evolution, foremost among them Selma de Mink.   The students who contributed to building COMPAS (Simon Stevenson, Alejandro Vigna G\'{o}mez, Coenraad Neijssel, Jim Barrett, Sebastian Gaebel) and external collaborators (including Stephen Justham and Philipp Podsiadlowski) deserve particular thanks.  Coenraad Neijssel deserves additional gratitude for assistance with figures \ref{fig:Rmax} and \ref{fig:BHremnant}Thanks also to Cole Miller, Vicky Kalogera, and Will Farr for stimulating discussions spanning many years. 
 
 AF is grateful for the astro-tourism.
 \end{acknowledgements}
