--- a/RMPreview.tex
+++ b/RMPreview.tex
@@ -393,27 +393,28 @@ A source with a detectable eccentricity would clearly signal a dynamical capture
 A measurement of an effective spin value close to either 1 or $-1$ would point to rapid spins of both black holes. A substantial positive effective spin coupled with high masses would point to the likelihood of chemically homogeneous formation \citep{Marchant:2016}, while a substantially negative effective spin measurement would indicate \ilya{an unexpected anti-alignment between rapid spins and the binary's orbital angular momentum, perhaps} through either a \ilya{supernova} spin tilt or dynamical formation.  
 
 \subsection{Population statistics}
-Population statistics will generally yield more information than individual events. \ajf{needs another intro sentence explaining what you mean by population statistics, I think, before this jumps into pretty jargony talk, and we should also say what you're trying to do with the statistical analysis} We can separate the approaches to inference on the observed populations into two types: unmodeled or weakly modeled inference, and inference that relies on accurate models. 
 
-At the most basic end of weakly modeled inference is the (possibly non-parametric) reconstruction of an underlying distribution, such as the mass function of merging black holes \citep{Mandel:2010stat,BBH:O1} while accounting for measurement uncertainties and selection effects.  \citet{Fishbach:2017mass} use a weakly parametrized model to argue for the possible evidence of a mass gap due to pair-instability supernovae, while \citet{TalbotThrane:2017} discuss weakly parametrized inference on the spin distributions.  Meanwhile, the time delay between star formation and binary merger could be extracted by comparing the merger rate as a function of redshift against the star formation rate as a function of redshift \citep{Mandel:2016select}.  
+Population statistics will generally yield more information than individual events.  \ilya{We can use the statistical analysis of sufficiently large observational data sets to infer bulk properties of the source population, such as the mass and spin distributions, and to search for distinct subpopulations.}  We can separate the approaches to inference on the observed populations into two types: unmodeled or weakly modeled inference, and inference that relies on accurate models. 
 
-We can look for clustering of events by observed parameters in the hope of finding distinct clusters of systems corresponding to different subpopulations or evolutionary channels.  \citet{Mandel:2015} argued that $\sim 60$ observations would make it possible to cluster events by mass \ajf{why do you want to cluster them by mass?} even after allowing for the significant measurement uncertainties inherent in gravitational-wave astronomy, and \citet{Mandel:2016cluster} demonstrated the feasibility of a particular clustering technique.  Meanwhile, \citet{Farr:2018} propose classifying binary black hole mergers by spin misalignment angle into aligned and isotropically distributed subpopulations.  It is worth noting that such clustering or classification schemes cannot hope to correctly assign individual events to a specific cluster, which is generally impossible given the significant measurement uncertainties \citep{Littenberg:2015}; instead, the goal is to measure the relative frequencies of events in different categories.
+At the most basic end of weakly modeled inference is the (possibly non-parametric) reconstruction of an underlying distribution, such as the mass function of merging black holes \citep{Mandel:2010stat,BBH:O1}, while accounting for measurement uncertainties and selection effects.  \ilya{For example,} \citet{Fishbach:2017mass} use a weakly parametrized model to argue for the possible evidence of a mass gap due to pair-instability supernovae, while \citet{TalbotThrane:2017} discuss weakly parametrized inference on the spin distributions.  Meanwhile, the time delay between star formation and binary merger could be extracted by comparing the merger rate as a function of redshift against the star formation rate as a function of redshift \citep{Mandel:2016select}.  
 
-The next level of population-based inference relies on assuming that precise, possibly parametrized, subpopulation distributions are known to determine the ratios of different subpopulations (e.g., arising from different formation channels), typically using hierarchical modeling \citep[extreme deconvolution in the language of][]{Hogg:2010}. \ajf{<--- this sounds super fancy but is also pretty impenetrable for me as a non-statistician} \citet{Zevin:2017} found that with $\sim 100$ observations, the mass distribution alone could be used to determine the formation channel, assuming the availability of trustworthy models of the mass distribution under different formation channels.  \citet{Vitale:2015,Stevenson:2017spin} carry out a similar investigation for spin-orbit misalignment angles; although these cannot be measured with the same accuracy as chirp masses, several hundred observations should again be sufficient to distinguish multiple formation channels through hierarchical modelling if the distributions under different channels are known \citep{Stevenson:2017spin}.  \ajf{I think the two examples here help explain what the start of the paragraph was about, but I still suggest trying to provide an initial explanation that's on a par with some of the astrophysics explanations in the article}
+We can look for \ilya{distinct subpopulations or clusters of events in the observable parameter space} in the hope of finding distinct \ilya{categories} corresponding to different evolutionary channels.  \citet{Mandel:2015} argued that $\sim 60$ observations would make it possible to \ilya{determine whether there are distinct subpopulations of events in mass space} even after allowing for the significant measurement uncertainties inherent in gravitational-wave astronomy, and \citet{Mandel:2016cluster} demonstrated the feasibility of a particular clustering technique.  Meanwhile, \citet{Farr:2018} propose classifying binary black hole mergers by spin misalignment angle into aligned and isotropically distributed subpopulations.  It is worth noting that such clustering or classification schemes cannot hope to correctly assign individual events to a specific cluster, which is generally impossible given the significant measurement uncertainties \citep{Littenberg:2015}; instead, the goal is to measure the relative frequencies of events in different categories.
+
+The next level of population-based inference relies on assuming that precise, possibly parametrized, subpopulation distributions are known.  \ilya{In this case,} hierarchical modeling \citep[extreme deconvolution in the language of][]{Hogg:2010} \ilya{can be used to simultaneously determine the ratios of different subpopulations (e.g., arising from different formation channels) and any free parameters in the subpopulation models.}  \citet{Zevin:2017} found that with $\sim 100$ observations, the mass distribution alone could be used to determine the formation channel, assuming the availability of trustworthy models of the mass distribution under different formation channels.  \citet{Vitale:2015} and \citet{Stevenson:2017spin} carry out a similar investigation for spin-orbit misalignment angles; although these cannot be measured with the same accuracy as chirp masses, several hundred observations should again be sufficient to distinguish multiple formation channels through hierarchical modelling if the distributions under different channels are known \citep{Stevenson:2017spin}.  
 
 \subsection{Advanced population synthesis techniques}
-There is, of course, a multitude of uncertain physics within any given model. \ajf{and this is a limitation for the above population statistics models?} How much mass do stars lose in winds, and what is the precise impact of metallicity and rotation on stellar evolution \citep[e.g.,][]{Renzo:2017}?  What happens to the star's angular momentum during collapse, how much mass is ejected, and how much of an asymmetric kick does the star receive \citep[e.g.,][]{Mirabel:2016}? How conservative is mass transfer in binaries and how much angular momentum is carried away by the mass lost from the binary during non-conservative mass transfer \citep[e.g.,][]{vandenHeuvel:2017}?  What are the conditions for the onset of a common-envelope phase and common envelope ejection, and how does the binary change in the process \citep[e.g.,][]{Ivanova:2013}?   How do dynamical interactions affect binary evolution?  And, in turn, how do massive stellar binaries and their compact remnants feed back into astrophysics and cosmology on all scales?
+There is, of course, a multitude of uncertain physics within any given model, \ilya{both limiting the usefulness of approaches that rely on a precise knowledge of subpopulation distributions and, more importantly, providing a set of key science questions that we would like to answer with the aid of gravitational-wave observations.}  How much mass do stars lose in winds, and what is the precise impact of metallicity and rotation on stellar evolution \citep[e.g.,][]{Renzo:2017}?  What happens to the star's angular momentum during collapse, how much mass is ejected, and how much of an asymmetric kick does the star receive \citep[e.g.,][]{Mirabel:2016}? How conservative is mass transfer in binaries and how much angular momentum is carried away by the mass lost from the binary during non-conservative mass transfer \citep[e.g.,][]{vandenHeuvel:2017}?  What are the conditions for the onset of a common-envelope phase and common envelope ejection, and how does the binary change in the process \citep[e.g.,][]{Ivanova:2013}?   How do dynamical interactions affect binary evolution?  And, in turn, how do massive stellar binaries and their compact remnants feed back into astrophysics and cosmology on all scales?
 
-One approach to addressing these big questions is to use the framework of population synthesis, which makes it possible to parametrize the uncertain physics and predict the expected source rates and distributions under different models.  Early efforts \ajf{the references are to 2012 and 2015 articles -- this does not sound particularly early} relied on a discrete set of a few models in the parameter space of population synthesis assumptions \citep{Dominik:2012,Stevenson:2015}.  Even with the low computational cost of population synthesis, it is not feasible to explore more than a few tens to a few hundred models, which is not sufficient to explore the full parameter space or consider the correlations between model parameters.  However, recent successes in building accurate and computationally efficient emulators over the model parameter space \citep{Barrett:2017} suggest that a full exploration of this space will soon be possible. \citet{Barrett:2017FIM} applied Fisher information matrix techniques to the space of model parameters and found that parameters such as mass loss rates during the Wolf-Rayet phase and common envelope energetics can be measured to the level of a few percent with a thousand detections. 
+One approach to addressing these big questions is to use the framework of population synthesis, which makes it possible to parametrize the uncertain physics and predict the expected source rates and distributions under different models.  \ilya{Most} efforts relied on a discrete set of a few models in the parameter space of population synthesis assumptions \citep[e.g.,][]{Dominik:2012,Stevenson:2015}.  Even with the low computational cost of population synthesis, it is not feasible to explore more than a few tens to a few hundred models, which is not sufficient to \ilya{cover} the full parameter space or consider the correlations between model parameters.  However, recent successes in building accurate and computationally efficient emulators over the model parameter space \citep{Barrett:2017} suggest that a full exploration of this space will soon be possible. \citet{Barrett:2017FIM} applied Fisher information matrix techniques to the space of model parameters and found that parameters such as mass loss rates during the Wolf-Rayet \ilya{and luminous blue variable} phases and common envelope energetics can be measured to the level of a few percent with a thousand detections. 
 
 \subsection{Other datasets and future missions}
 Additional observational data sets will further aid in interpreting gravitational-wave observations and in refining models of binary stellar evolution.
 
-Future gravitational-wave missions raise the prospect of observing the evolution of populations of merging binaries -- or individual systems -- across a broad band of frequencies, from the millihertz \citep[e.g.,][]{Sesana:2016} through the decihertz \citep{Mandel:2017} and hertz \citep{ET:2012}, to the LIGO/Virgo band.  \ajf{say briefly why this would be informative?}
+Future gravitational-wave missions raise the prospect of observing the evolution of populations of merging binaries -- or individual systems -- across a broad band of frequencies, from the millihertz \citep[e.g.,][]{Sesana:2016} through the decihertz \citep{Mandel:2017} and hertz \citep{ET:2012}, to the LIGO/Virgo band.  \ilya{The ability to track individual sources and source populations across the frequency spectrum will make it possible to combine information which can best be measured at low frequencies (e.g., eccentricity and sky location) and high frequencies (e.g., spins).}
 
 Although electromagnetic transients are not broadly expected to be associated with binary black hole mergers \citep[e.g.,][]{Lyutikov:2016}, any such observations would indicate the persistence of material around the merging binary \citep[e.g.,][]{deMinkKing:2017}.  %\todo{More details -- brief summary of Lorentz center workshop?}
 
-The most useful constraints are likely to come from the requirement that any candidate evolutionary model must self-consistently explain all of the available data: gravitational-wave observations, perhaps in multiple frequency bands, plus electromagnetic observations of X-ray binaries, Galactic neutron stars, gamma ray bursts, supernovae, luminous red novae, etc. Incorporating these constraints will make it possible to resolve modelling degeneracies and to build a concordance model of massive binary evolution.  %\todo{Other possible gravitational-wave sources? More details / references on XRBs, LRN, etc.?}
+\ilya{Ultimately,} the most useful constraints are likely to come from the requirement that any candidate evolutionary model must self-consistently explain all of the available data: gravitational-wave observations, perhaps in multiple frequency bands, \ilya{as well as} electromagnetic observations of X-ray binaries, Galactic neutron stars, gamma ray bursts, supernovae, luminous red novae, etc. Incorporating these constraints will make it possible to resolve modelling degeneracies and to build a concordance model of massive binary evolution.  
 
 \subsection{Outlook}
 
