--- a/RMPreview.tex
+++ b/RMPreview.tex
@@ -410,7 +410,7 @@ One approach to addressing these big questions is to use the framework of popula
 \subsection{Other datasets and future missions}
 Additional observational data sets will further aid in interpreting gravitational-wave observations and in refining models of binary stellar evolution.
 
-Future gravitational-wave missions raise the prospect of observing the evolution of populations of merging binaries -- or individual systems -- across a broad band of frequencies, from the millihertz \citep[e.g.,][]{Sesana:2016} through the decihertz \citep{Mandel:2017} and hertz \citep{ET:2012}, to the LIGO/Virgo band.  \ilya{The ability to track individual sources and source populations across the frequency spectrum will make it possible to combine information which can best be measured at low frequencies (e.g., eccentricity and sky location) and high frequencies (e.g., spins).}
+Future gravitational-wave missions raise the prospect of observing the evolution of populations of merging binaries -- or individual systems -- across a broad band of frequencies, from the millihertz \citep[e.g.,][]{Sesana:2016} through the decihertz \citep{Mandel:2017} and hertz \citep{ET:2012}, to the LIGO/Virgo band.  \ilya{The ability to track individual sources and source populations across the frequency spectrum will make it possible to combine information which can best be measured at low frequencies (e.g., eccentricity and sky location) and high frequencies (e.g., spins).}  \ilya{Meanwhile, a stochastic background of gravitational waves from individually unresolvable binary black holes could be measured in the next few years \citep{GW150914:stoch}, possibly providing additional insight on high-redshift population, although the only constraining parameter in a detection of such a background will likely be its amplitude, which carries only limited information \citep{Callister:2016}.}
 
 Although electromagnetic transients are not broadly expected to be associated with binary black hole mergers \citep[e.g.,][]{Lyutikov:2016}, any such observations would indicate the persistence of material around the merging binary \citep[e.g.,][]{deMinkKing:2017}.  %\todo{More details -- brief summary of Lorentz center workshop?}
 
@@ -418,11 +418,12 @@ Although electromagnetic transients are not broadly expected to be associated wi
 
 \subsection{Outlook}
 
-\ajf{Tie things together here before the dinosaur bit. Right now, we have a few observations and some plausible evolutionary channels. It's not possible to tell them apart yet statistically, but we have the tools in place to do so and we expect to have enough data to do so within the next few years...? }
+\ilya{At the moment, we have a half dozen observations of merging binary black holes.  That is a half dozen more than three years ago, and we have already learned a great deal: binary black holes exist; they merge; they have do so relatively frequently; they have a broad range of masses, but none of the ones seen so far seem to have rapid net spins in the direction of the orbital angular momentum.  We also have several plausible evolutionary channels, some of which appear to  explain many of the observed properties (rates and masses), though spins continue to present something of a puzzle, particularly in light of the claimed high spins in a few high-mass black-hole X-ray binaries.}
 
-\ajf{Also: is the field generally leaning in a particular direction at the moment? Initial suspicions? And what would be surprising?}
+\ilya{At the same time, we have the tools in place to create detailed models of stellar and binary evolution and dynamical interactions under a variety of parametrizable assumptions.  The statistical techniques for analyzing the data and inferring properties directly from the observations or by comparison with the detailed models are in place.  Most importantly, we have wonderful detectors which are continuing to improve, and we expect to have enough data in the few years to carry out these analysis.  Perhaps in a few years we will know that all of the channels described here contribute non-negligibly to binary black hole formation; that black holes get small kicks at birth, and spin slowly in merging binaries; and we may have the first detections of new objects such as $200 M_\odot$ intermediate mass black holes.}
 
-The future of gravitational-wave astronomy holds the prospect of addressing the inverse problem of massive binary stellar evolution: inferring the formation channels and their physics from observations of the merging compact-object binary population.  Like a paleontologist who uses her knowledge of anatomy to determine the appearance, eating habits, and even behaviour of extinct dinosaurs from their fossilized remnants \ajf{love it ;) }, we can now use merging black holes --- remnants of massive stars --- to probe the behaviour of those stars, and particularly their evolution in binaries \citep{MandelFarmer:2017}.   With the data to come and the theoretical developments underway, this future is brightly chirping indeed! \ajf{hmm... needs a better last sentence or two, or we need to have mentioned chirping more previously...!}
+The future of gravitational-wave astronomy holds the prospect of addressing the inverse problem of massive binary stellar evolution: inferring the formation channels and their physics from observations of the merging compact-object binary population.  Like a paleontologist who uses her knowledge of anatomy to determine the appearance, eating habits, and even behaviour of extinct dinosaurs from their fossilized remnants \ajf{love it ;) }, we can now use merging black holes --- remnants of massive stars --- to probe the behaviour of those stars, and particularly their evolution in binaries.
+% \citep{MandelFarmer:2017}.   With the data to come and the theoretical developments underway, this future is brightly chirping indeed! \ajf{hmm... needs a better last sentence or two, or we need to have mentioned chirping more previously...!}
 
 
 \begin{acknowledgements}
