A few edits to all sections

--- a/Mandel.bib
+++ b/Mandel.bib
@@ -1,3 +1,12 @@
+@Article{magritte,
+     author    = "Ren\'{e} Magritte",
+     title     = "The Treachery of Images",
+journal = "Los Angeles County Museum of Art",
+     year      = 1929, 
+}
+
+
+
  @ARTICLE{Mandel:2007rates,
 author = {{Mandel}, I. and {Brown}, D.~A. and {Gair}, J.~R. and {Miller}, M.~C.},
     title = "{Rates and Characteristics of Intermediate Mass Ratio Inspirals Detectable by Advanced LIGO}",
@@ -10886,7 +10895,7 @@ archivePrefix = "arXiv",
 @phdthesis{Was:thesis,
   author =       "Michal Was",
   title =        "Searching for gravitational waves associated with gamma-ray bursts in 2009-2010 LIGO-Virgo data",
-  school =       "Laboratoire de lÕAcc\'{e}lerateur Lin\'{e}aire, LAL 11-119",
+  school =       "Laboratoire de lï¿½Acc\'{e}lerateur Lin\'{e}aire, LAL 11-119",
   year =         2011
 }
 
